--- a/Frontend/FindIt/package.json
+++ b/Frontend/FindIt/package.json
@@ -15,9 +15,11 @@
     "@fontsource/roboto": "^5.2.5",
     "@mui/material": "^7.1.1",
     "@mui/styled-engine-sc": "^7.1.1",
+    "firebase": "^11.9.0",
     "primereact": "^10.9.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
