--- a/Frontend/FindIt/package.json
+++ b/Frontend/FindIt/package.json
@@ -10,17 +10,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.21.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
     "@mui/material": "^7.1.1",
     "@mui/styled-engine-sc": "^7.1.1",
     "firebase": "^11.9.0",
+    "lucide-react": "^0.522.0",
+    "next-themes": "^0.4.6",
+    "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.6.2",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
